--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,14 +42,14 @@
                     </div>
                     <div class="m-b"></div>
                     <h4>欢 迎 使 用 <strong>提 问 箱</strong></h4>
-                    <ul class="m-b">
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> SpringBoot</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Mybatis</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Shiro</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Thymeleaf</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Bootstrap</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 爆肝ing</li>
-                    </ul> 
+<!--                     <ul class="m-b"> -->
+                        <li><em>SpringBoot</em></li>
+                        <li><em>Mybatis</em></li>
+                        <li><em>Shiro</em></li>
+                        <li><em>Thymeleaf</em></li>
+                        <li><em>Bootstrap</em></li>
+                        <li><em>爆肝ing</em></li>
+<!--                     </ul>  -->
                      
                 </div>
             </div>
@@ -79,8 +79,11 @@
                     </div>
 					<div id="erro"></div>
                     <button class="btn btn-success btn-block" id="btnSubmit" >登录</button>
-                    	<a th:href="@{/resetPassword}" style="color:gold" class="mt-2">-忘记密码？</a></br>
-                    	<a th:href="@{/}" style="color:gold" class="mt-2">--直接访问--</a>      
+                    <div class="checkbox mb-1">
+				            <input type="checkbox" name="rememberMe" value="remember-me"> 记住我
+				    </div>
+                    <a th:href="@{/resetPassword}" style="color:gold" class="mt-2">--忘记密码？</a></br>
+                    <a th:href="@{/}" style="color:gold" class="mt-2">--直接访问--</a>      
                 </form>  
                 <a href="/register" class="col-sm-5">
                 <button  class="btn btn-success btn-block" >立即注册&raquo;</button> <!-- data-loading-text="Loading..." id="btn_login" onclick="loag()" -->
@@ -94,14 +97,6 @@
         </div>
     </div>
 
-
-    <!----------------------------------------------------------------------------------- -->
-    <!-- text-muted: 柔和色
-        添加版权 -->
-    <!-- <footer class="text-center text-muted py-4">
-        Copyright @Letoo 2020-05
-    </footer>
- -->
  <!-- 验证插件 -->
 	<script src="../static/ajax/libs/validate/jquery.validate.min.js"
         th:src="@{/ajax/libs/validate/jquery.validate.min.js}"></script>
@@ -115,7 +110,14 @@
     <script src="../static/ajax/libs/validate/additional-methods.min.js"
         th:src="@{/ajax/libs/validate/additional-methods.min.js}"></script>
     <script src="../static/js/jquery.base64.js" th:src="@{js/jquery.base64.js}" type="text/javascript"></script>
-
+	
+	<script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/jsbn.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/jsbn2.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/prng4.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/rng.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/rsa.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/rsa2.js"></script>
+	
 </body>
 
 </html>
