--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -42,14 +42,20 @@
                     </div>
                     <div class="m-b"></div>
                     <h4>欢 迎 使 用 <strong> 提 问 箱</strong></h4>
-                    <ul class="m-b">
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> SpringBoot</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Mybatis</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Shiro</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Thymeleaf</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Bootstrap</li>
-                        <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 爆肝ing</li>
-                    </ul>
+<!--                     <ul class="m-b"> -->
+<!--                         <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> SpringBoot</li> -->
+<!--                         <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Mybatis</li> -->
+<!--                         <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Shiro</li> -->
+<!--                         <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Thymeleaf</li> -->
+<!--                         <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> Bootstrap</li> -->
+<!--                         <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i> 爆肝ing</li> -->
+<!--                     </ul> -->
+					<li><em>SpringBoot</em></li>
+                    <li><em>Mybatis</em></li>
+                    <li><em>Shiro</em></li>
+                    <li><em>Thymeleaf</em></li>
+                    <li><em>Bootstrap</em></li>
+                    <li><em>爆肝ing</em></li>
                      
                 </div>
             </div>
@@ -61,10 +67,11 @@
                     <input type="text" name="username" id="username" class="form-control uname" placeholder="请输入用户名"  />
                     
                     <label for="mail" class="sr-only">mail</label>
-                    <input type="email" name="mail" id="mail" class="form-control email" autocomplete="on" placeholder="请输入邮箱"  />
+                    <input type="email" name="mail" id="mail" class="form-control email"  placeholder="请输入邮箱"  />
                     
                     <label for="password1" class="sr-only">password1</label>
                     <input type="password" name="password1" id="password1" class="form-control pword" placeholder="请输入密码"/>
+                    <span id="passstrength" name="passstrength"></span>
                     
                     <label for="password2" class="sr-only">password2</label>
                     <input type="password" name="password2" id="password2" class="form-control pword" placeholder="再次输入密码"/>
@@ -119,10 +126,12 @@
         th:src="@{/ajax/libs/validate/additional-methods.min.js}"></script>
 	<script src="../static/js/jquery.base64.js" th:src="@{js/jquery.base64.js}" type="text/javascript"></script>
 	
-	<script>
-        
-        
-    </script>
+	<script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/jsbn.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/jsbn2.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/prng4.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/rng.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/rsa.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://www-cs-students.stanford.edu/~tjw/jsbn/rsa2.js"></script>
     
 </body>
 
