--- a/src/main/resources/templates/resetPasswordForm.html
+++ b/src/main/resources/templates/resetPasswordForm.html
@@ -127,7 +127,7 @@
               	if(sname!=null)
               	{
               		var sname_ = decodeURIComponent(sname);
-              		alert(sname_);
+              		//alert(sname_);
               		}
                 var password1 = $('#password1').val();
                 $.ajax({
@@ -141,7 +141,10 @@
                       	"mailCode": decodeURIComponent(sname)
                     },
                     success: function (result) {
-                        if (result.code == 200) { //修改成功
+                    	if(result.description != null){
+                    		alert(result.description);
+                    	}
+                    	else if (result.code == 200) { //修改成功
                             //layer.msg("密码修改成功");
                             alert("密码修改成功");
                             window.location.href = "/login";	
@@ -245,7 +248,25 @@
                     },
                 });
             }
+            
+        	//设置AJAX的全局默认选项
+                $.ajaxSetup( {
+                	type: "post",  //请求的方法
+                	cache: false, //去除缓存
+                    async: true,  //async:false同步。true异步方式
+                    dataType: "json",  //指定响应得到的数据类型：【“list”必须严格为一个json数据！】
+                    headers: { // 默认添加请求头
+                        "uuidToken": '[[${session.uuidToken}]]',
+                    } ,
+                    error: function(jqXHR, textStatus, errorMsg){ // 出错时默认的处理函数
+                        // jqXHR 是经过jQuery封装的XMLHttpRequest对象
+                        // textStatus 可能为： null、"timeout"、"error"、"abort"或"parsererror"
+                        // errorMsg 可能为： "Not Found"、"Internal Server Error"等
 
+                        // 提示形如：发送AJAX请求到"/index.html"时出错[404]：Not Found
+                        alert( '发送AJAX请求时出错[' + jqXHR.status + ']：' + errorMsg );        
+                    }
+                } );
 
         </script>
 
